@@ -2,7 +2,7 @@
 
 {block name="field"}
 	{foreach $options option}
-		<input class="{$inputClass} {$class}" type="radio" name="{$htmlName}" id="{$htmlId}-{$option.value}" value="{htmlencode $option.value}"{if $option.value == $checked} checked="checked"{/if}{if $option.disabled} disabled="disabled"{/if} {$extraAttributes} />
-		<label class="{$class}" for="{$htmlId}-{$option.value}">{$option.label}</label>
+		<input class="{$inputClass} {$class}" type="radio" name="{$htmlName}" id="{$htmlId}-{$option.value}" value="{htmlencode $option.value}"{if $option.value == $value} checked="checked"{/if}{if $option.disabled} disabled="disabled"{/if} {$extraAttributes} />
+		<label class="{$class}" for="{$htmlId}-{$option.value}">{Label $option.label}</label>
 	{/foreach}
 {/block}
